--- a/SpikaEnterprise/AndroidManifest.xml
+++ b/SpikaEnterprise/AndroidManifest.xml
@@ -30,9 +30,10 @@
 
     <application
         android:allowBackup="false"
+        android:icon="@drawable/ic_launcher"
         android:hardwareAccelerated="true"
         android:largeHeap="true"
-        android:theme="@style/Theme.Transparent" >
+        android:theme="@style/Theme.Custom" >
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -53,14 +54,17 @@
             android:name="com.clover.spika.enterprise.chat.LoginActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize|stateHidden" >
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateHidden" />
+        <activity
+            android:name="com.clover.spika.enterprise.chat.LobbyActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name="com.clover.spika.enterprise.chat.ChatActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize|stateHidden" >
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateHidden" />
 
         <receiver
             android:name="com.clover.spika.enterprise.chat.gcm.GcmBroadcastReceiver"
@@ -79,8 +83,7 @@
             android:name="com.clover.spika.enterprise.chat.CharacterListActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.clover.spika.enterprise.chat.GroupListActivity"
             android:launchMode="singleTask"
@@ -91,20 +94,20 @@
             android:screenOrientation="portrait" />
         <activity
             android:name="com.clover.spika.enterprise.chat.AddMembers"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.clover.spika.enterprise.chat.CameraCropActivity"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.clover.spika.enterprise.chat.PhotoActivity"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.clover.spika.enterprise.chat.ProfileActivity"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
