--- a/SpikaEnterprise/AndroidManifest.xml
+++ b/SpikaEnterprise/AndroidManifest.xml
@@ -30,6 +30,7 @@
 
     <application
         android:name="com.clover.spika.enterprise.chat.extendables.SpikaEnterpriseApp"
+        android:label="@string/app_name"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
