Audio view/record

--- a/SpikaEnterprise/AndroidManifest.xml
+++ b/SpikaEnterprise/AndroidManifest.xml
@@ -101,7 +101,10 @@
         <activity
             android:name="com.clover.spika.enterprise.chat.RecordAudioActivity"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name="com.clover.spika.enterprise.chat.VoiceActivity"
+            android:screenOrientation="portrait" />
+        
         <!-- Old -->
         <activity
             android:name=".UserListActivity"
