--- a/SpikaEnterprise/AndroidManifest.xml
+++ b/SpikaEnterprise/AndroidManifest.xml
@@ -133,6 +133,9 @@
             android:name="com.clover.spika.enterprise.chat.InvitePeopleActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
+        <activity
+            android:name="com.clover.spika.enterprise.chat.ThreadsActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
