--- a/SpikaEnterprise/AndroidManifest.xml
+++ b/SpikaEnterprise/AndroidManifest.xml
@@ -135,7 +135,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name="com.clover.spika.enterprise.chat.ThreadsActivity"
-            android:windowSoftInputMode="adjustResize"
+            android:windowSoftInputMode="adjustResize|stateHidden"
             android:screenOrientation="portrait"/>
     </application>
 
