create room bug fix, activate/deactivate, delete room, admin rigths

--- a/SpikaEnterprise/AndroidManifest.xml
+++ b/SpikaEnterprise/AndroidManifest.xml
@@ -108,6 +108,10 @@
             android:name="com.clover.spika.enterprise.chat.CameraCropActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
+         <activity
+            android:name="com.clover.spika.enterprise.chat.CameraFullPhotoActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.clover.spika.enterprise.chat.PhotoActivity"
             android:launchMode="singleTop"
