UI for Group Profile

--- a/SpikaEnterprise/AndroidManifest.xml
+++ b/SpikaEnterprise/AndroidManifest.xml
@@ -130,6 +130,10 @@
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
+            android:name="com.clover.spika.enterprise.chat.ProfileGroupActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
+        <activity
             android:name="com.clover.spika.enterprise.chat.ChatMembersActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
