--- a/SpikaEnterprise/AndroidManifest.xml
+++ b/SpikaEnterprise/AndroidManifest.xml
@@ -149,6 +149,10 @@
             android:name="com.clover.spika.enterprise.chat.ThreadsActivity"
             android:windowSoftInputMode="adjustResize|stateHidden"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name="com.clover.spika.enterprise.chat.ChooseCategoryActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
