create room with groups

--- a/SpikaEnterprise/AndroidManifest.xml
+++ b/SpikaEnterprise/AndroidManifest.xml
@@ -162,6 +162,10 @@
             android:name="com.clover.spika.enterprise.chat.RoomsActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
+        <activity
+            android:name="com.clover.spika.enterprise.chat.DeselectUsersInGroupActivity"
+            android:windowSoftInputMode="stateHidden"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
