edit profile second part

--- a/SpikaEnterprise/AndroidManifest.xml
+++ b/SpikaEnterprise/AndroidManifest.xml
@@ -172,6 +172,10 @@
         <activity
             android:name="com.clover.spika.enterprise.chat.CameraActivityForSamsung"
             android:screenOrientation="portrait" />
+         <activity
+            android:name="com.clover.spika.enterprise.chat.EditProfileActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
