--- a/SpikaEnterprise/AndroidManifest.xml
+++ b/SpikaEnterprise/AndroidManifest.xml
@@ -40,9 +40,9 @@
         android:name="com.clover.spika.enterprise.chat.extendables.SpikaEnterpriseApp"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
-        android:largeHeap="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:theme="@style/Theme.Custom" >
         <meta-data
             android:name="com.google.android.gms.version"
@@ -159,22 +159,25 @@
         <activity
             android:name="com.clover.spika.enterprise.chat.CreateRoomActivity"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="stateHidden"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name="com.clover.spika.enterprise.chat.RoomsActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
             android:name="com.clover.spika.enterprise.chat.DeselectUsersInGroupActivity"
-            android:windowSoftInputMode="stateHidden"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name="com.clover.spika.enterprise.chat.CameraActivityForSamsung"
             android:screenOrientation="portrait" />
-         <activity
+        <activity
             android:name="com.clover.spika.enterprise.chat.EditProfileActivity"
             android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.clover.spika.enterprise.chat.ChangePasswordActivity"
             android:screenOrientation="portrait" />
     </application>
 
