--- a/SpikaEnterprise/AndroidManifest.xml
+++ b/SpikaEnterprise/AndroidManifest.xml
@@ -176,6 +176,9 @@
             android:name="com.clover.spika.enterprise.chat.EditProfileActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
+         <activity
+            android:name="com.clover.spika.enterprise.chat.ForgotPasswordActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
