Set a ne admin, change category done for a room

--- a/SpikaEnterprise/AndroidManifest.xml
+++ b/SpikaEnterprise/AndroidManifest.xml
@@ -184,6 +184,10 @@
             android:screenOrientation="portrait" />
 
         <service android:name="com.clover.spika.enterprise.chat.services.custom.PoolingService" />
+
+        <activity
+            android:name="com.clover.spika.enterprise.chat.SetAdminActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
