--- a/SpikaEnterprise/AndroidManifest.xml
+++ b/SpikaEnterprise/AndroidManifest.xml
@@ -27,10 +27,10 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <permission
-        android:name="com.clover.spika.enterprise.chat.gcm.permission.C2D_MESSAGE"
+        android:name="com.clover.spika.enterprise.chat.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="com.clover.spika.enterprise.chat.gcm.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.clover.spika.enterprise.chat.permission.C2D_MESSAGE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -44,9 +44,6 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/Theme.Custom" >
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyATEhCZG3oXNhH-0C9gLPHxUvAdWQPagt8" />
@@ -81,19 +78,21 @@
 
         <receiver
             android:name="com.clover.spika.enterprise.chat.services.gcm.GcmBroadcastReceiver"
-            android:exported="true"
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-                <category android:name="com.clover.spika.enterprise.chat.gcm" />
+                <category android:name="com.clover.spika.enterprise.chat" />
             </intent-filter>
         </receiver>
 
-        <service android:name="com.clover.spika.enterprise.chat.services.gcm.GcmIntentService" />
         <service
-            android:name="com.clover.spika.enterprise.chat.services.robospice.Jackson2SpiceService"
+            android:name="com.clover.spika.enterprise.chat.services.gcm.GcmIntentService"
+            android:enabled="true"
+            android:exported="false" />
+        <service
+            android:name="com.clover.spika.enterprise.chat.services.robospice.OkHttpService"
             android:exported="false" />
         <service android:name="com.clover.spika.enterprise.chat.services.custom.PoolingService" />
 
