--- a/SpikaEnterprise/AndroidManifest.xml
+++ b/SpikaEnterprise/AndroidManifest.xml
@@ -50,6 +50,9 @@
         android:largeHeap="true"
         android:theme="@style/Theme.Custom" >
         <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyATEhCZG3oXNhH-0C9gLPHxUvAdWQPagt8" />
 
