--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
@@ -44,6 +44,13 @@ android {
             minSdkVersion 14
         }
     }
+
+    signingConfigs {
+        debug {
+            storeFile file("debug.keystore")
+        }
+    }
+
 }
 
 dependencies {
