--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
@@ -12,7 +12,6 @@ android {
             sourceCompatibility JavaVersion.VERSION_1_7
             targetCompatibility JavaVersion.VERSION_1_7
         }
-        multiDexEnabled true
     }
 
     buildTypes {
@@ -37,7 +36,7 @@ android {
             // dev utilizes minSDKVersion = 21 to allow the Android gradle plugin
             // to pre-dex each module and produce an APK that can be tested on
             // Android Lollipop without time consuming dex merging processes.
-            minSdkVersion 21
+            minSdkVersion 14
         }
         prod {
             // The actual minSdkVersion for the application.
@@ -51,13 +50,16 @@ android {
         }
     }
 
+    dexOptions {
+        javaMaxHeapSize "2048M"
+    }
 }
 
 dependencies {
     compile project(':slidingMenulib')
     compile project(':emoji_lib')
     compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.google.android.gms:play-services:+'
+    compile 'com.google.android.gms:play-services-maps:7.0.0'
     compile files('libs/commons-io-2.4.jar')
     compile files('libs/commons-lang3-3.3.2.jar')
     compile files('libs/greendao-1.3.7.jar')
@@ -76,6 +78,5 @@ dependencies {
     compile files('libs/robospice-okhttp-1.4.14.jar')
     compile files('libs/socketio.jar')
     compile 'com.android.support:support-v13:22.0.0'
-    compile 'com.android.support:multidex:1.0.0'
     compile files('libs/gcm.jar')
 }
