--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
@@ -49,10 +49,6 @@ android {
             storeFile file("debug.keystore")
         }
     }
-
-    dexOptions {
-        javaMaxHeapSize "2048M"
-    }
 }
 
 dependencies {
@@ -60,6 +56,7 @@ dependencies {
     compile project(':emoji_lib')
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.google.android.gms:play-services-maps:7.0.0'
+    compile 'com.google.android.gms:play-services-location:7.0.0'
     compile files('libs/commons-io-2.4.jar')
     compile files('libs/commons-lang3-3.3.2.jar')
     compile files('libs/greendao-1.3.7.jar')
