--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
@@ -47,6 +47,9 @@ android {
     signingConfigs {
         debug {
             storeFile file("debug.keystore")
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storePassword 'android'
         }
     }
 }
