--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
@@ -1,23 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 22
+    buildToolsVersion '22.0.1'
 
     defaultConfig {
         applicationId "com.clover.spika.enterprise.chat"
         minSdkVersion 14
-        targetSdkVersion 21
+        targetSdkVersion 22
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_1_7
             targetCompatibility JavaVersion.VERSION_1_7
-        }
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
 
@@ -44,6 +37,13 @@ android {
         }
     }
 
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+        }
+    }
+
     signingConfigs {
         debug {
             storeFile file("debug.keystore")
@@ -57,9 +57,8 @@ android {
 dependencies {
     compile project(':slidingMenulib')
     compile project(':emoji_lib')
-    compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.google.android.gms:play-services-maps:7.0.0'
-    compile 'com.google.android.gms:play-services-location:7.0.0'
+    compile 'com.google.android.gms:play-services-maps:7.5.0'
+    compile 'com.google.android.gms:play-services-location:7.5.0'
     compile files('libs/commons-io-2.4.jar')
     compile files('libs/commons-lang3-3.3.2.jar')
     compile files('libs/greendao-1.3.7.jar')
@@ -79,4 +78,5 @@ dependencies {
     compile files('libs/socketio.jar')
     compile 'com.android.support:support-v13:22.0.0'
     compile files('libs/gcm.jar')
+    compile 'com.android.support:support-v4:22.2.0'
 }
