--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '22.0.1'
 
     defaultConfig {
-        applicationId "com.clover.spika.enterprise.chat"
+        applicationId "com.medicbleep.chat"
         minSdkVersion 14
         targetSdkVersion 22
         compileOptions {
