--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
@@ -39,7 +39,6 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
@@ -50,6 +49,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
             storePassword 'android'
+        }
+        release {
+            storeFile file('MedicBleepKeystore.jks')
+            storePassword "medicpass"
+            keyAlias "MedicBleep"
+            keyPassword "medicpass"
         }
     }
 }
