--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/build.gradle
@@ -49,6 +49,7 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
             storePassword 'android'
+            ext.enableCrashlytics = true
         }
         release {
             storeFile file('MedicBleepKeystore.jks')
@@ -57,6 +58,28 @@ android {
             keyPassword "medicpass"
         }
     }
+}
+
+buildscript {
+    repositories {
+        mavenCentral()
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+
+}
+
+apply plugin: 'com.android.application'
+
+//Put Fabric plugin after Android plugin
+apply plugin: 'io.fabric'
+
+repositories {
+    jcenter()
+    maven { url 'https://maven.fabric.io/public' }
 }
 
 dependencies {
@@ -85,4 +108,7 @@ dependencies {
     compile 'com.android.support:support-v13:22.0.0'
     compile files('libs/gcm.jar')
     compile 'com.android.support:support-v4:22.2.0'
+    compile('com.crashlytics.sdk.android:crashlytics:2.2.3@aar') {
+        transitive = true;
+    }
 }
